; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_function.c_assign_parm_setup_block_p.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_function.c_assign_parm_setup_block_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.assign_parm_data_one = type { i64, i32, i32, i32, i32 }

@BLKmode = common dso_local global i64 0, align 8
@PARALLEL = common dso_local global i64 0, align 8
@BYTES_BIG_ENDIAN = common dso_local global i64 0, align 8
@UNITS_PER_WORD = common dso_local global i64 0, align 8
@downward = common dso_local global i64 0, align 8
@upward = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.assign_parm_data_one*)* @assign_parm_setup_block_p to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @assign_parm_setup_block_p(%struct.assign_parm_data_one* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.assign_parm_data_one*, align 8
  store %struct.assign_parm_data_one* %0, %struct.assign_parm_data_one** %3, align 8
  %4 = load %struct.assign_parm_data_one*, %struct.assign_parm_data_one** %3, align 8
  %5 = getelementptr inbounds %struct.assign_parm_data_one, %struct.assign_parm_data_one* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @BLKmode, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %19

10:                                               ; preds = %1
  %11 = load %struct.assign_parm_data_one*, %struct.assign_parm_data_one** %3, align 8
  %12 = getelementptr inbounds %struct.assign_parm_data_one, %struct.assign_parm_data_one* %11, i32 0, i32 4
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @GET_CODE(i32 %13)
  %15 = load i64, i64* @PARALLEL, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %10
  store i32 1, i32* %2, align 4
  br label %19

18:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %17, %9
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i64 @GET_CODE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
